infra/istio/policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: k8s-demo-app
spec:
  mtls:
    mode: STRICT
